--- a/src/views/en/about.ejs
+++ b/src/views/en/about.ejs
@@ -11,7 +11,7 @@
                 <%- include('/common/_header', { meta }) %>
                     <ul class="c-breadcrumbs c-wrapper">
                         <li><a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>index.html">Top</a></li>
-                        <li>▶︎</li>
+                        <li class="c-breadcrumbs-arrow">▶︎</li>
                         <li>Who We Are</li>
                     </ul>
 
@@ -34,11 +34,11 @@
                                     <h2 class="about-hero-content-text-mvv"><span class="c-title-color">M</span>ission
                                     </h2>
                                     <p class="about-hero-content-text-explanation">
-                                        定性的な観点を超え、<br />医療分野にエビデンスベースの活動をもたらし、<br />持続可能な医療に貢献すること。</p>
+                                        医療分野のあらゆる事業にデータサイエンスを実装し、<br />持続可能な医療の実現に貢献する。</p>
                                     <h2 class="about-hero-content-text-mvv"><span class="c-title-color">V</span>ision
                                     </h2>
                                     <p class="about-hero-content-text-explanation">
-                                        10年後、医療分野における<br />エビデンスベースのソリューションプロバイダーとして、<br />リーダー企業となること。</p>
+                                        10年後の医療分野において、<br />エビデンスベースのソリューションプロバイダーとして、<br />リーダー企業となる。</p>
                                     <h2 class="about-hero-content-text-mvv"><span class="c-title-color">V</span>alue
                                     </h2>
                                     <p class="about-hero-content-text-explanation">過去の成功を超える革新を起こす挑戦を続けること。</p>
@@ -46,7 +46,7 @@
                                 <div class="about-hero-content-sticky">
                                     <div class="about-hero-content-sticky-img">
                                         <img src="<%= meta.basePath %><%= ASSET_PATH %>asset/img/about/header-item.png"
-                                            alt="">
+                                            alt="DataScience">
                                     </div>
                                 </div>
                             </div>
@@ -66,7 +66,7 @@
                             <li class="about-strengths-list-item js-fadein">
                                 <div>
                                     <img src="../../<%= ASSET_PATH %>asset/img/about/key-differentiator-img2.png"
-                                        alt="高度な専門人材">
+                                        alt="専門性と展開力">
                                 </div>
                                 <h4>専門性と展開力</h4>
                                 <p>循環器領域で培った専門性と幅広い医療分野への展開力</p>
@@ -74,7 +74,7 @@
                             <li class="about-strengths-list-item js-fadein">
                                 <div>
                                     <img src="../../<%= ASSET_PATH %>asset/img/about/key-differentiator-img3.png"
-                                        alt="高度な専門人材">
+                                        alt="豊富な実績">
                                 </div>
                                 <h4>豊富な実績</h4>
                                 <p>国内外の製薬・医療機器企業との豊富な実績</p>
@@ -82,7 +82,7 @@
                             <li class="about-strengths-list-item js-fadein">
                                 <div>
                                     <img src="../../<%= ASSET_PATH %>asset/img/about/key-differentiator-img4.png"
-                                        alt="高度な専門人材">
+                                        alt="高度なデータ活用力">
                                 </div>
                                 <h4>高度なデータ活用力</h4>
                                 <p>独自開発ソリューション「InsighTCROSS®」を含む高度なデータ活用力</p>
@@ -90,10 +90,10 @@
                             <li class="about-strengths-list-item js-fadein">
                                 <div>
                                     <img src="../../<%= ASSET_PATH %>asset/img/about/key-differentiator-img5.png"
-                                        alt="高度な専門人材">
+                                        alt="知的財産の強み">
                                 </div>
                                 <h4>知的財産の強み</h4>
-                                <p>知的財産の強み：国内特許3件、出願中2件、PCT出願5件（2025年9月現在）</p>
+                                <p>知的財産の強み：国内特許4件、出願中3件、PCT出願5件（2025年9月現在）</p>
                             </li>
                         </ul>
                     </section>
