--- a/src/views/en/privacy.ejs
+++ b/src/views/en/privacy.ejs
@@ -12,7 +12,7 @@
 
                     <ul class="c-breadcrumbs c-wrapper">
                         <li><a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>index.html">Top</a></li>
-                        <li>▶︎</li>
+                        <li class="c-breadcrumbs-arrow">▶︎</li>
                         <li>Privacy Policy</li>
                     </ul>
                     <section class="c-terms-policy c-wrapper">
