--- a/src/views/en/services/marketing.ejs
+++ b/src/views/en/services/marketing.ejs
@@ -12,7 +12,7 @@
 
                     <ul class="c-breadcrumbs c-wrapper">
                         <li><a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>index.html">Top</a></li>
-                        <li>▶︎</li>
+                        <li class="c-breadcrumbs-arrow">▶︎</li>
                         <li>Webマーケティング事業</li>
                     </ul>
 
@@ -20,7 +20,7 @@
                         <div class="c-modal-case">
                             <h4 class="c-modal-case-title"></h4>
                             <h5 class="c-modal-case-subtitle"></h5>
-                            <div class="c-modal-case-img"><img class="c-modal-img-src" src=""></div>
+                            <div class="c-modal-case-img"><img class="c-modal-img-src" src="ケーススタディ"></div>
                             <h6>成果</h6>
                             <ul class="modal-case-list">
                             </ul>
@@ -33,7 +33,6 @@
                     </div>
 
                     <section class="c-hero c-wrapper">
-                        <p class="js-fadein">Web Marketing</p>
                         <h2 class="js-fadein">Webマーケティング事業</h2>
                         <div class="c-hero-content js-fadein">
                             <div>
@@ -50,7 +49,8 @@
 
                     <section class="c-explanation">
                         <div class="c-explanation-bg">
-                            <img src="../../../<%= ASSET_PATH %>asset/img/services/explanation.jpg" alt="高度な専門人材">
+                            <img src="../../../<%= ASSET_PATH %>asset/img/services/explanation2.jpg"
+                                alt="第一線の循環器内科医に選ばれ続ける「TCROSS NEWS」">
                             <div class="c-explanation-bg-overlay"></div>
                         </div>
                         <div class="c-explanation-content c-wrapper">
@@ -64,12 +64,12 @@
                                         </p>
                                     </li>
                                     <li>
-                                        <h4>専門コンテンツによる高いエン<br class="_pc" />ゲージメント</h4>
+                                        <h4>専門コンテンツによる高いエンゲージメント</h4>
                                         <p>年間1,300本の循環器専門コンテンツを配信し、有料会員の満足度は97%、メールマガジンの開封率も約40%と高水準を維持しています。さらに、施設単位での有料利用も拡大しています。
                                         </p>
                                     </li>
                                     <li>
-                                        <h4>独自のセグメンテーションによ<br class="_pc" />る精密なターゲティング</h4>
+                                        <h4>独自のセグメンテーションによる精密なターゲティング</h4>
                                         <p>
                                             循環器領域のトレンドやデータ、現場での知見をもとに、循環器内科医を5つの層に定量的に分類する独自分析を実施。専門分野、関心領域、情報への反応傾向、臨床フェーズなどを多角的に捉え、各層に最適化された精緻なターゲティングとメッセージ設計を実現します。
                                         </p>
@@ -84,35 +84,27 @@
                         <ul class="c-task-list">
                             <li class="js-fadein">
                                 <div>
-                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue1.png" alt="ISSUE01">
                                 </div>
                                 <h4>新しい薬剤への医師の興味喚起が難しい</h4>
-                                <p>循環器領域に特化した知見と経験をもとに、医療現場の課題や最新動向を的確に捉えた企画を設計します。臨床と産業の双方に寄り添い、医療従事者・企業の双方に価値を届けます。
-                                </p>
                             </li>
                             <li class="js-fadein">
                                 <div>
-                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue2.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue2.png" alt="ISSUE02">
                                 </div>
                                 <h4>忙しい医師に対して十分な接触機会を確保できない</h4>
-                                <p>最新の知見や手技を効果的に伝えられるよう、演者への依頼や、座長との進行・内容のすり合わせに手間がかかりすぎる
-                                </p>
                             </li>
                             <li class="js-fadein">
                                 <div>
-                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue3.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue3.png" alt="ISSUE03">
                                 </div>
                                 <h4>制作したデジタルコンテンツがターゲット医師に届かない</h4>
-                                <p>医療広告ガイドラインや関連法規・業界ルールに遵守したイベント運営ができているか不安が拭えない
-                                </p>
                             </li>
                             <li class="js-fadein">
                                 <div>
-                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue4.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue4.png" alt="ISSUE04">
                                 </div>
                                 <h4>閲覧はあっても、処方・導入への効果が見えにくい</h4>
-                                <p>登壇される医師の先生方のタイトなスケジュール調整や、煩雑な交通・宿泊の手配、資料作成サポートまで手が回らない
-                                </p>
                             </li>
                         </ul>
                     </section>
@@ -126,7 +118,7 @@
                                     <h4>マーケティング企画</h4>
                                     <div>
                                         <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png"
-                                            alt="高度な専門人材">
+                                            alt="マーケティング企画">
                                     </div>
                                     <p>
                                         TCROSS NEWS利用データをもとに、最適なマーケティング企画をご提案
@@ -137,7 +129,7 @@
                                     <h4>コンテンツ制作</h4>
                                     <div>
                                         <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png"
-                                            alt="高度な専門人材">
+                                            alt="コンテンツ制作">
                                     </div>
                                     <p>
                                         専門のライターチームにより各種ガイドラインを遵守した信頼性の高い記事や動画制作が可能
@@ -148,7 +140,7 @@
                                     <h4>プロモーション</h4>
                                     <div>
                                         <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png"
-                                            alt="高度な専門人材">
+                                            alt="プロモーション">
                                     </div>
                                     <p>
                                         虚血、心不全、不整脈など各専門の医師が最も興味を持つ切り口でコンテンツのプロモーションをサポート
@@ -159,7 +151,7 @@
                                     <h4>アンケート調査</h4>
                                     <div>
                                         <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png"
-                                            alt="高度な専門人材">
+                                            alt="アンケート調査">
                                     </div>
                                     <p>
                                         アンケート項目の設計からターゲット医師への調査配信、結果分析まで次につながる調査をご提供
@@ -169,7 +161,8 @@
                         </div>
                     </section>
 
-                    <section class="c-case c-wrapper">
+                    <!-- Case Studyセクションコメントアウトにて残しています -->
+                    <!-- <section class="c-case c-wrapper">
                         <h3 class="c-title js-fadein"><span>Case</span> Study</h3>
                         <ul class="c-case-list">
                             <li class="js-fadein">
@@ -185,7 +178,7 @@
                                 </div>
                                 <div class="js-modal" data-modal="3">
                                     <img src="../../../<%= ASSET_PATH %>asset/img/services/marketing_case1.jpg"
-                                        alt="高度な専門人材">
+                                        alt="Case01">
                                 </div>
                                 <p class="c-case-list-more js-modal _sp" data-modal="3">ケーススタディ詳細</p>
 
@@ -202,13 +195,13 @@
                                 </div>
                                 <div class="js-modal" data-modal="4">
                                     <img src="../../../<%= ASSET_PATH %>asset/img/services/marketing_case1.jpg"
-                                        alt="高度な専門人材">
+                                        alt="Case02">
                                 </div>
                                 <p class="c-case-list-more js-modal _sp" data-modal="4">ケーススタディ詳細</p>
 
                             </li>
                         </ul>
-                    </section>
+                    </section> -->
 
                     <section class="achievements">
                         <div class="c-wrapper">
