--- a/src/views/jp/index.ejs
+++ b/src/views/jp/index.ejs
@@ -16,42 +16,42 @@
                 <div class="top-hero-swiper-wrapperSlide">
                   <picture>
                     <source srcset="../../<%= ASSET_PATH %>asset/img/top/hero_sp.jpg" media="(max-width: 450px)">
-                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="スライド 1">
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="持続可能な医療へと変革するプロフェッショナル">
                   </picture>
                 </div>
 
                 <div class="top-hero-swiper-wrapperSlide">
                   <picture>
                     <source srcset="../../<%= ASSET_PATH %>asset/img/top/hero_sp.jpg" media="(max-width: 450px)">
-                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="スライド 2">
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="持続可能な医療へと変革するプロフェッショナル">
                   </picture>
                 </div>
 
                 <div class="top-hero-swiper-wrapperSlide">
                   <picture>
                     <source srcset="../../<%= ASSET_PATH %>asset/img/top/hero_sp.jpg" media="(max-width: 450px)">
-                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="スライド 3">
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="持続可能な医療へと変革するプロフェッショナル">
                   </picture>
                 </div>
 
                 <div class="top-hero-swiper-wrapperSlide">
                   <picture>
                     <source srcset="../../<%= ASSET_PATH %>asset/img/top/hero_sp.jpg" media="(max-width: 450px)">
-                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="スライド 4">
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="持続可能な医療へと変革するプロフェッショナル">
                   </picture>
                 </div>
 
                 <div class="top-hero-swiper-wrapperSlide">
                   <picture>
                     <source srcset="../../<%= ASSET_PATH %>asset/img/top/hero_sp.jpg" media="(max-width: 450px)">
-                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="スライド 5">
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="持続可能な医療へと変革するプロフェッショナル">
                   </picture>
                 </div>
 
                 <div class="top-hero-swiper-wrapperSlide">
                   <picture>
                     <source srcset="../../<%= ASSET_PATH %>asset/img/top/hero_sp.jpg" media="(max-width: 450px)">
-                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="スライド 6">
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/hero.jpg" alt="持続可能な医療へと変革するプロフェッショナル">
                   </picture>
                 </div>
 
@@ -98,16 +98,16 @@
 
           <section class="our-services">
             <div class="our-services-wrapper">
-              <h2 class="our-services-wrapper-title c-inter js-fadein"><span class="c-title-color">Our</span> Services</h2>
-              <p class="js-fadein">医療の基盤を支えるEvidenceを、未来へつながる医療の力へ。その変革に必要な専門領域を揃えています。</p>
+              <h2 class="our-services-wrapper-title c-inter js-fadein"><span class="c-title-color">Our</span> Services
+              </h2>
               <div class="our-services-wrapper-pickup">
                 <div class="our-services-wrapper-pickupContent js-fadein">
                   <a href="https://insightcross.com/" target="_blank">
                     <div class="our-services-wrapper-pickupContentText">
                       <a href="https://insightcross.com/" target="_blank">
-                        <h3>データサイエンス事業</h3>
-                        <p>医療領域における市場調査、市場分析から、マーケティング戦略の立案を含むコンサルティングを行います。 医療現場と企業をつなぐための市場のunmet
-                          needsの探索、製品導入後のマーケティング活動、販売活動の支援、研究会の組織化などを総合的にサポートします。</p>
+                        <h3>データサイエンス事</h3>
+                        <p>データサイエンスを用いて医薬品・医療機器企業に効率的なマーケティング活動を支援します。
+                          テクロスが開発した意思決定支援サービス「InsighTCROSS®」は、効率的な営業・マーケティングを実践するための意思決定支援ソフトウェアです。</p>
                         <p class="our-services-wrapper-pickupContentMore c-case-list-more _pc">もっと見る</p>
                         <p class="our-services-wrapper-pickupContentTextLine">サービスの詳細<span
                             class="c-link-short-transition"></span></p>
@@ -122,7 +122,7 @@
                 <div class="our-services-wrapper-pickupContent _reverse js-fadein">
                   <div class="our-services-wrapper-pickupContentText">
                     <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>services/marketing.html">
-                      <h3>Webデジタルマーケティング事業</h3>
+                      <h3>Webマーケティング事業</h3>
                       <p>循環器領域の専門サイト「TCROSS NEWS®」を通じて、医薬品・医療機器を対象とした広範囲のプロモーション活動をお手伝いします。
                         Web広告、学術集会や製品に関連するサイトの制作、管理を請け負います。</p>
                       <p class="our-services-wrapper-pickupContentMore c-transition-list-more _pc">もっと見る</p>
@@ -132,7 +132,7 @@
                   </div>
                   <div>
                     <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>services/marketing.html">
-                      <img src="../../<%= ASSET_PATH %>asset/img/top/digital-marketing.jpg" alt="Webデジタルマーケティング事業">
+                      <img src="../../<%= ASSET_PATH %>asset/img/top/digital-marketing.jpg" alt="Webマーケティング事業">
                     </a>
                   </div>
                 </div>
@@ -144,8 +144,7 @@
                     <img src="../../<%= ASSET_PATH %>asset/img/top/our-services3.jpg" alt="イベントコーディネート事業">
                   </div>
                   <h3>イベントコーディネート事業</h3>
-                  <p>循環器領域の専門サイト「TCROSS NEWS®」を運営し、最新情報の提供を行っています。
-                    国内外における医学領域の学術集会や講演会の取材やインタビューなどから、専門性の高い記事を制作します。</p>
+                  <p>学術集会、ライブデモンストレーションコース、講演会、座談会等の企画から手配、運営までを総合的にプロデュースします。</p>
                   <p class="our-services-wrapper-list-businesLine">サービスの詳細<span class="c-link-short-arrow"></span></p>
                 </a>
 
@@ -154,8 +153,7 @@
                     <img src="../../<%= ASSET_PATH %>asset/img/top/our-services5.jpg" alt="メディアコミュニケーション事業">
                   </div>
                   <h3>メディアコミュニケーション事業</h3>
-                  <p>循環器領域の専門サイト「TCROSS NEWS®」を運営し、最新情報の提供を行っています。
-                    国内外における医学領域の学術集会や講演会の取材やインタビューなどから、専門性の高い記事を制作します。</p>
+                  <p>循環器領域の専門サイトTCROSS NEWS®を運営し、最新情報の提供を行っています。 国内外における医学領域の学術集会や講演会の取材やインタビューなどから、専門性の高い記事を制作します。</p>
                   <p class="our-services-wrapper-list-businesLine">TCROSS NEWS<span
                       class="c-link-short-transition"></span>
                   </p>
@@ -164,19 +162,18 @@
                 <a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>services/clinical.html"
                   class="our-services-wrapper-list-busines js-fadein">
                   <div>
-                    <img src="../../<%= ASSET_PATH %>asset/img/top/our-services2.jpg" alt="臨床研究サポート事業">
+                    <img src="../../<%= ASSET_PATH %>asset/img/top/our-services2.jpg" alt="臨床研究支援事業">
                   </div>
-                  <h3>臨床研究サポート事業</h3>
-                  <p>循環器領域の専門サイト「TCROSS NEWS®」を運営し、最新情報の提供を行っています。
-                    国内外における医学領域の学術集会や講演会の取材やインタビューなどから、専門性の高い記事を制作します。</p>
+                  <h3>臨床研究支援事業</h3>
+                  <p>独自のパイプラインを活かした研究コンサルテーションを行います。 研究事務局の運営のみならず、施設選定、研究計画書策定、統計解析、論文化までの一貫した臨床研究支援が可能です。</p>
                   <p class="our-services-wrapper-list-businesLine">サービスの詳細<span class="c-link-short-arrow"></span></p>
                 </a>
 
                 <div class="our-services-wrapper-list-busines js-fadein">
                   <div><img src="../../<%= ASSET_PATH %>asset/img/top/our-services6.jpg" alt="コンサルティング事業"></div>
                   <h3>コンサルティング事業</h3>
-                  <p>循環器領域の専門サイト「TCROSS NEWS®」を運営し、最新情報の提供を行っています。
-                    国内外における医学領域の学術集会や講演会の取材やインタビューなどから、専門性の高い記事を制作します。</p>
+                  <p>医療領域における市場調査、市場分析から、マーケティング戦略の立案を含むコンサルティングを行います。 医療現場と企業をつなぐための市場のunmet
+                    needsの探索、製品導入後のマーケティング活動、販売活動の支援、研究会の組織化などを総合的にサポートします。</p>
                 </div>
               </div>
             </div>
