--- a/src/views/jp/services/event.ejs
+++ b/src/views/jp/services/event.ejs
@@ -12,28 +12,11 @@
 
                     <ul class="c-breadcrumbs c-wrapper">
                         <li><a href="<%= meta.basePath %><%= ASSET_PATH %><%= meta.lang %>index.html">Top</a></li>
-                        <li>▶︎</li>
+                        <li class="c-breadcrumbs-arrow">▶︎</li>
                         <li>イベントコーディネート事業</li>
                     </ul>
 
-                    <div class="c-modal">
-                        <div class="c-modal-case">
-                            <h4 class="c-modal-case-title"></h4>
-                            <h5 class="c-modal-case-subtitle"></h5>
-                            <div class="c-modal-case-img"><img class="c-modal-img-src" src=""></div>
-                            <h6>成果</h6>
-                            <ul class="modal-case-list">
-                            </ul>
-                            <h6>背景</h6>
-                            <p class="modal-case-text-1"></p>
-                            <h6>取り組み</h6>
-                            <p class="modal-case-text-2"></p>
-                            <div class="c-modal-case-close" id="modal-close-btn"></div>
-                        </div>
-                    </div>
-
                     <section class="c-hero c-wrapper">
-                        <p class="js-fadein">Event Cordinate</p>
                         <h2 class="js-fadein">イベントコーディネート事業</h2>
                         <div class="c-hero-content js-fadein">
                             <div>
@@ -51,33 +34,21 @@
 
                     <section class="c-explanation">
                         <div class="c-explanation-bg">
-                            <img src="../../../<%= ASSET_PATH %>asset/img/services/explanation.jpg" alt="高度な専門人材">
+                            <img src="../../../<%= ASSET_PATH %>asset/img/services/explanation.jpg" alt="依頼に応えるだけでなく、医療の現場と市場の変化を捉え、新しい企画を自ら生み出すイベントプロデュースチーム">
                             <div class="c-explanation-bg-overlay"></div>
                         </div>
                         <div class="c-explanation-content c-wrapper">
-                            <h3>依頼に応えるだけでなく、<br />医療の現場と市場の変化を捉え、<br />新しい企画を自ら生み出す<br />イベントプロデュースチーム</h3>
+                            <h3>医療現場と市場の変化を的確に捉え、<br class="_br-pc" />新たな価値を生み出す企画を<br class="_br-pc" />提案するイベントコーディネートチーム</h3>
                             <div>
                                 <ul>
                                     <li>
                                         <h4>専門領域への<br class="_pc" />深い理解</h4>
-                                        <p>循環器領域に特化した知見と経験をもとに、医療現場の課題や最新動向を的確に捉えた企画を設計します。臨床と産業の双方に寄り添い、医療従事者・企業の双方に価値を届けます。
+                                        <p>循環器領域に特化して培ってきた知見と経験を基に、医療現場が直面する課題や最新のトレンドを的確に把握し、実効性の高いイベント企画を設計します。
                                         </p>
                                     </li>
                                     <li>
                                         <h4>信頼関係に<br class="_pc" />基づく共創体制</h4>
-                                        <p>医療従事者・企業・関係団体との長年の信頼関係を基盤に、
-                                            目的や立場を問わず「共に創る」体制を確立。依頼内容に応えるだけでなく、より効果的な構成・運営を提案し、
-                                            プロジェクト全体を統合的にディレクションします。</p>
-                                    </li>
-                                    <li>
-                                        <h4>トレンドを<br class="_pc" />捉える企画力</h4>
-                                        <p>自社メディアでの情報発信や取材活動、学会参加を通じて現場や企業のリアルな情報を収集。業界の変化や次の潮流を先読みし、参加者が「今、知りたい」と思うテーマをいち早く企画に落とし込みます。
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <h4>データと<br class="_pc" />経験を融合した<br class="_pc" />改善サイクル</h4>
-                                        <p>イベント後のアンケートや視聴データを分析し、 参加者の反応・満足度・再参加傾向を可視化。数値的な裏付けと経験知を組み合わせ、次の企画へ確実に反映します。
-                                        </p>
+                                        <p>30年にわたる業界経験を通じて築いてきた強固な信頼関係を基盤に、主催者と参加者の双方にとって価値ある、Win-Winの関係を実現する共創型のイベント運営を行います。</p>
                                     </li>
                                 </ul>
                             </div>
@@ -89,34 +60,34 @@
                         <ul class="c-task-list">
                             <li class="js-fadein">
                                 <div>
-                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue1.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue1.png" alt="ISSUE01">
                                 </div>
-                                <h4>集客・参加率</h4>
-                                <p>循環器領域に特化した知見と経験をもとに、医療現場の課題や最新動向を的確に捉えた企画を設計します。臨床と産業の双方に寄り添い、医療従事者・企業の双方に価値を届けます。
+                                <h4>集客が思うようにいかない</h4>
+                                <p>告知はしているものの、参加者が集まらず、期待した成果につながらない。
                                 </p>
                             </li>
                             <li class="js-fadein">
                                 <div>
-                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue2.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue2.png" alt="ISSUE02">
                                 </div>
-                                <h4>企画・コンテンツ</h4>
-                                <p>最新の知見や手技を効果的に伝えられるよう、演者への依頼や、座長との進行・内容のすり合わせに手間がかかりすぎる
+                                <h4>やりたい企画と予算のバランスが取れない</h4>
+                                <p>理想のイベント像はあるが、コスト面で実現が難しく、妥協を強いられてしまう
                                 </p>
                             </li>
                             <li class="js-fadein">
                                 <div>
-                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue3.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue3.png" alt="ISSUE03">
                                 </div>
-                                <h4>法規制・倫理</h4>
-                                <p>医療広告ガイドラインや関連法規・業界ルールに遵守したイベント運営ができているか不安が拭えない
+                                <h4>最新のトレンドが読めない</h4>
+                                <p>何をテーマにすべきか、どの切り口が今求められているのか判断が難しい。
                                 </p>
                             </li>
                             <li class="js-fadein">
                                 <div>
-                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue4.png" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue4.png" alt="ISSUE04">
                                 </div>
-                                <h4>多忙な医師への対応</h4>
-                                <p>登壇される医師の先生方のタイトなスケジュール調整や、煩雑な交通・宿泊の手配、資料作成サポートまで手が回らない
+                                <h4>プロモーション手法が限られている</h4>
+                                <p>いつも同じ告知・集客手段に頼ってしまい、新しい打ち手が見つからない。
                                 </p>
                             </li>
                         </ul>
@@ -131,129 +102,67 @@
                                     <h4>ビジョン設計</h4>
                                     <div>
                                         <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png"
-                                            alt="高度な専門人材">
+                                            alt="ビジョン設計">
                                     </div>
-                                    <p>
-                                        医療の意義から逆算する企画社会的意義と将来像を明確化
-                                    </p>
                                 </li>
                                 <li class="js-fadein">
                                     <h5>Phase 02</h5>
                                     <h4>データ分析・戦略立案</h4>
                                     <div>
                                         <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png"
-                                            alt="高度な専門人材">
+                                            alt="データ分析・戦略立案">
                                     </div>
-                                    <p>
-                                        数字で“人の動き”を読むログ・SNS反応から戦略を構築
-                                    </p>
                                 </li>
                                 <li class="js-fadein">
                                     <h5>Phase 03</h5>
                                     <h4>広報・コンテンツ設計</h4>
                                     <div>
                                         <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png"
-                                            alt="高度な専門人材">
+                                            alt="広報・コンテンツ設計">
                                     </div>
-                                    <p>
-                                        届くメッセージを設計<br />医療従事者・企業双方に訴求
-                                    </p>
                                 </li>
                                 <li class="js-fadein">
                                     <h5>Phase 04</h5>
                                     <h4>運営・進行管理</h4>
                                     <div>
                                         <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png"
-                                            alt="高度な専門人材">
+                                            alt="運営・進行管理">
                                     </div>
-                                    <p>
-                                        現場に強い運営力<br />学会水準の品質と多演者対応
-                                    </p>
                                 </li>
                                 <li class="js-fadein">
                                     <h5>Phase 05</h5>
                                     <h4>効果分析と改善提案</h4>
                                     <div>
                                         <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png"
-                                            alt="高度な専門人材">
+                                            alt="効果分析と改善提案">
                                     </div>
-                                    <p>
-                                        成果を見える化<br />KPIを分析し次に活かす
-                                    </p>
                                 </li>
                             </ul>
                         </div>
                     </section>
 
-                    <section class="c-case c-wrapper">
-                        <h3 class="c-title js-fadein"><span>Case</span> Study</h3>
-                        <ul class="c-case-list">
-                            <li class="js-fadein">
-                                <div>
-                                    <h5>Case <span>01</span></h5>
-                                    <h4>循環器治療の主要領域を網羅した、包括的ライブイベントの実現</h4>
-                                    <p>豊橋ライブデモンストレーションコース</p>
-                                    <p>・2025年の開催では、5日間・6配信ルーム・100を超えるプログラムを実施<br />・参加者数2,447名（前年比＋399名）／有料参加者前年比150％増<br />・学術イベントの持続的成長モデルとして定着<br />・多様なステークホルダーが共に価値を創出するイベントの新たな形を提示
-                                    </p>
-                                    <p class="c-case-list-more js-modal _pc" data-modal="1">ケーススタディ詳細</p>
-                                </div>
-                                <div class="js-modal" data-modal="1">
-                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/event_case1.jpg"
-                                        alt="高度な専門人材">
-                                </div>
-                                <p class="c-case-list-more js-modal _sp" data-modal="1">ケーススタディ詳細</p>
-
-                            </li>
-                            <li class="js-fadein">
-                                <div>
-                                    <h5>Case <span>02</span></h5>
-                                    <h4>日本発の分岐部治療研究会として、世界の潮流と歩む</h4>
-                                    <p>Japanese Bifurcation Club（JBC）</p>
-                                    <p>・EBC／KBC／ABCなど世界主要学会との連携による国際展開<br />・分岐部治療に特化した継続的学術コミュニティの構築<br />・症例を通じた臨床知の共有・議論の促進<br />・日本の知見を世界へ届けるライブプラットフォームの確立
-                                    </p>
-                                    <p class="c-case-list-more js-modal _pc" data-modal="2">ケーススタディ詳細</p>
-                                </div>
-                                <div class="js-modal" data-modal="2">
-                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/event_case2.jpg"
-                                        alt="高度な専門人材">
-                                </div>
-                                <p class="c-case-list-more js-modal _sp" data-modal="2">ケーススタディ詳細</p>
-
-                            </li>
-                        </ul>
-                    </section>
-
                     <section class="event-clause">
                         <div class="c-wrapper">
                             <h3 class="c-headline js-fadein">学会・医療研究会を成功に導く5か条</h3>
-                            <p class="event-clause-lead js-fadein">私たちは、医療イベントを単なる開催ではなく、「価値を生み、次につながる場」として設計することを大切にしています。その実現には、以下の5つの要素が欠かせないと考えています。</p>
+                            <p class="event-clause-lead js-fadein">私たちは、医療イベントを運営する企業ではなく、「価値を生み、次につながる場」として設計することを大切にしています。その実現には、以下の5つの要素が欠かせないと考えています。</p>
                             <ul class="event-clause-list">
                                 <li class="js-fadein">
                                     <div>
                                         <h4>01</h4>
                                         <h5>明確で持続的な<br class="_pc" />ビジョン</h5>
                                     </div>
-                                    <p>
-                                        開催するイベントに、社会的意義や将来像を明確に描いたビジョンが存在し、その実現に向けた一貫した方針をお持ちであること。
-                                    </p>
                                 </li>
                                 <li class="js-fadein">
                                     <div>
                                         <h4>02</h4>
                                         <h5>一定の開催実績と体制</h5>
                                     </div>
-                                    <p>
-                                        同種または関連テーマのイベントを継続的に実施されており、安定した運営・企画体制を確立されていること。
-                                    </p>
                                 </li>
                                 <li class="js-fadein">
                                     <div>
                                         <h4>03</h4>
                                         <h5>関係者間で<br />共有・浸透したビジョン</h5>
                                     </div>
-                                    <p>
-                                        主催者だけでなく、院内外の協力者・賛同者との間で理念や目的を共有し、共通の価値観のもとで推進されていること。
-                                    </p>
                                 </li>
                                 <li class="js-fadein">
                                     <div>
@@ -261,57 +170,11 @@
                                         <h5>外部ステークホルダーとの連携・支援体制</h5>
 
                                     </div>
-                                    <p>
-                                        関連企業、学会、自治体などとの協力関係を構築し、イベントの持続可能性と社会的信頼性を担保されていること。
-                                    </p>
                                 </li>
                                 <li class="js-fadein">
                                     <div>
                                         <h4>05</h4>
                                         <h5>提供価値に応じた<br />公正な対価設計</h5>
-                                    </div>
-                                    <p>
-                                        企画・運営・参加に関わるリソースや専門性に見合った適正な対価を設定し、関係者すべてに公平な価値還元を行われていること。
-                                    </p>
-                                </li>
-                            </ul>
-                        </div>
-                    </section>
-
-                    <section class="c-member">
-                        <div class="wrapper">
-                            <h3 class="c-title c-wrapper js-fadein"><span>Our</span> Team</h3>
-                            <ul class="c-member-list">
-                                <li class="js-fadein">
-                                    <div>
-                                        <img src="../../../<%= ASSET_PATH %>asset/img/services/ourTeam1.jpg" alt="橋本 悟">
-                                    </div>
-                                    <div>
-                                        <h4>橋本 悟</h4>
-                                        <p>
-                                            アメリカ、ネブラスカ州ベルビュー大学経営学部卒業（cum
-                                            laude）後帰国、外資系ヘルスケアコンサルティング会社を経て、ジョンソン・エンド・ジョンソン株式会社コーディス事業部に入社。その後は一貫してカテーテルインターベンション領域で営業・マーケティングのキャリアを経て、2005年株式会社テクロスを設立。
-                                            2019年グロービス経営大学院経営研究科入学、2021年同大学院経営研究科卒業
-                                            MBA（経営学修士：成績優秀修了者）。2023年　中央大学大学院戦略経営研究科ビジネス科学専攻　博士後期課程。
-                                            多摩大学医療・介護ソリューション研究所、日本科学技術ジャーナリスト会議、及び、International Science Writers
-                                            Association (ISWA) 正会員、日本医療マネジメント学会所属
-                                        </p>
-                                        <a href="#">プロフィール詳細<span class="c-link-short-arrow"></span></a>
-                                    </div>
-                                </li>
-                                <li class="js-fadein">
-                                    <div>
-                                        <img src="../../../<%= ASSET_PATH %>asset/img/services/ourTeam2.jpg"
-                                            alt="許沢 佳弘">
-                                    </div>
-                                    <div>
-                                        <h4>許沢 佳弘</h4>
-                                        <p>
-                                            日本赤十字社医療センター、東京大学医学部附属病院で循環器内科医として勤務。東京大学大学院で分子生物学領域の基礎研究に従事。医療系ベンチャーミーカンパニー株式会社を経て、2019年より株式会社テクロスへ入社。現在も臨床医の傍ら、TCROSS
-                                            NEWSでwebコンテンツの企画とMedical advisorを兼任。
-                                            循環器専門医、東京大学医学部卒業(MD)、 東京大学大学院医学系研究科博士課程修了(Ph.D.)。
-                                        </p>
-                                        <a href="#">プロフィール詳細<span class="c-link-short-arrow"></span></a>
                                     </div>
                                 </li>
                             </ul>
